fixed collapse bar issues

--- a/bookkeeping/static/css/output.css
+++ b/bookkeeping/static/css/output.css
@@ -4938,13 +4938,13 @@ details.collapse summary::-webkit-details-marker {
   border-color: var(--fallback-bc,oklch(var(--bc)/0.2));
 }
 
-.border-transparent {
-  border-color: transparent;
-}
-
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+}
+
+.border-transparent {
+  border-color: transparent;
 }
 
 .bg-base-100 {
@@ -4991,16 +4991,16 @@ details.collapse summary::-webkit-details-marker {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-opacity-70 {
-  --tw-bg-opacity: 0.7;
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
 
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
+}
+
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
 }
 
 .bg-cover {
@@ -5306,12 +5306,6 @@ details.collapse summary::-webkit-details-marker {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.backdrop-blur-sm {
-  --tw-backdrop-blur: blur(4px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -5346,6 +5340,180 @@ details.collapse summary::-webkit-details-marker {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Layout.css */
+
+:root {
+  --leftbar-width: 240px;
+}
+
+[ignore-variables] {
+  --leftmenu-background: initial;
+  --main-content-background: initial;
+  --topbar-background: initial;
+}
+
+.leftmenu-wrapper {
+  width: var(--leftbar-width);
+  transition: all 0.3s;
+  background: var(--leftmenu-background);
+  position: sticky;
+  bottom: 0px;
+  top: 0px;
+  height: 100vh;
+  min-width: 15rem;
+  border-inline-end-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity, 1)));
+}
+
+[data-leftbar-type="mobile"] .leftmenu-wrapper {
+  position: fixed;
+  z-index: 50;
+}
+
+.leftmenu-wrapper.hide {
+  margin-inline-start: calc(var(--leftbar-width) * -1);
+}
+
+.leftmenu-wrapper .menu li a.active {
+  background-color: var(--fallback-bc,oklch(var(--bc)/0.1));
+  color: inherit;
+}
+
+[data-leftbar-hide] .leftmenu-wrapper {
+  margin-inline-start: calc(var(--leftbar-width) * -1);
+}
+
+[data-leftbar-type="mobile"]:not([data-leftbar-hide]) .leftbar-backdrop {
+  position: fixed;
+  inset: 0px;
+  z-index: 40;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+  --tw-bg-opacity: 0.5;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.topbar-wrapper {
+  background: var(--topbar-background);
+}
+
+.main-wrapper {
+  width: 100%;
+  max-width: 100vw;
+  height: 100vh;
+  background: var(--main-content-background);
+}
+
+.content-wrapper {
+  flex-grow: 1;
+  padding: 1.5rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.pro-badge {
+  margin-inline-start: 0px;
+  border-radius: 0.25rem;
+  background-color: var(--fallback-bc,oklch(var(--bc)/0.1));
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-size: 12px;
+  line-height: 1;
+  opacity: 0.7;
+}
+
+/* forms.css */
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-transition: background-color 10000s ease-in-out 0s;
+  transition: background-color 10000s ease-in-out 0s;
+}
+
+/* components.css */
+
+/*--  Overrides  --*/
+
+.btn {
+  font-weight: 500;
+}
+
+.card .card-title {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.dropdown .dropdown-content {
+  z-index: 10;
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dropdown .dropdown-content:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.timeline-vertical.timeline-hr-sm > li > hr {
+  width: 2px;
+}
+
+/* animation.css */
+
+.animate-bounce-2 {
+  animation: bounce-2 2s infinite alternate;
+}
+
+@keyframes bounce-2 {
+  0% {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-8px);
+  }
+}
+
+/* apexcharts.css */
+
+.apexcharts-canvas * {
+  font-family: var(--body-font-family), serif !important;
+}
+
+.apexcharts-canvas .apexcharts-gridline {
+  stroke: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
+.apexcharts-theme-dark .apexcharts-toolbar .apexcharts-menu {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-border-opacity, 1)));
+}
+
+.apexcharts-canvas .apexcharts-xaxis line {
+  stroke: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
+.apexcharts-canvas .apexcharts-inner .apexcharts-grid-borders line {
+  stroke: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
+.apexcharts-canvas .apexcharts-yaxis line {
+  stroke: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
+.apexcharts-canvas .apexcharts-xaxis-tick {
+  stroke: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -5364,14 +5532,14 @@ details.collapse summary::-webkit-details-marker {
   background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
 }
 
-.hover\:bg-error:hover {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-er,oklch(var(--er)/var(--tw-bg-opacity, 1)));
-}
-
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-error:hover {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-er,oklch(var(--er)/var(--tw-bg-opacity, 1)));
 }
 
 .hover\:text-primary:hover {
@@ -5451,5 +5619,3 @@ details.collapse summary::-webkit-details-marker {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
-
-
