--- a/input.css
+++ b/input.css
@@ -2,4 +2,134 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Layout.css */
+:root {
+    --leftbar-width: 240px;
+}
 
+[ignore-variables] {
+    --leftmenu-background: initial;
+    --main-content-background: initial;
+    --topbar-background: initial;
+}
+
+.leftmenu-wrapper {
+    width: var(--leftbar-width);
+    transition: all 0.3s;
+    background: var(--leftmenu-background);
+    @apply sticky bottom-0 top-0 h-screen min-w-60 border-e-[1px] border-base-200;
+}
+
+[data-leftbar-type="mobile"] .leftmenu-wrapper {
+    @apply fixed z-50;
+}
+
+.leftmenu-wrapper.hide {
+    margin-inline-start: calc(var(--leftbar-width) * -1);
+}
+
+.leftmenu-wrapper .menu li a.active {
+    @apply bg-base-content/10;
+    @apply text-inherit;
+}
+
+[data-leftbar-hide] .leftmenu-wrapper {
+    margin-inline-start: calc(var(--leftbar-width) * -1);
+}
+
+[data-leftbar-type="mobile"]:not([data-leftbar-hide]) .leftbar-backdrop {
+    @apply fixed inset-0 z-40 bg-gray-900 bg-opacity-50 transition-all;
+}
+
+.topbar-wrapper {
+    background: var(--topbar-background);
+}
+
+.main-wrapper {
+    width: 100%;
+    max-width: 100vw;
+    height: 100vh;
+    background: var(--main-content-background);
+}
+
+.content-wrapper {
+    @apply grow p-6 transition-all;
+}
+
+.pro-badge {
+    @apply ms-0 rounded bg-base-content/10 px-1.5 py-[3px] text-[12px]/none opacity-70;
+}
+
+/* forms.css */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 10000s ease-in-out 0s;
+}
+
+/* components.css */
+/*--  Overrides  --*/
+.btn {
+    @apply font-medium;
+}
+
+.card .card-title {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.dropdown .dropdown-content {
+    z-index: 10;
+    @apply shadow hover:shadow-md;
+}
+
+.timeline-vertical.timeline-hr-sm > li > hr {
+    width: 2px;
+}
+
+/* animation.css */
+.animate-bounce-2 {
+    -webkit-animation: bounce-2 2s infinite alternate;
+    animation: bounce-2 2s infinite alternate;
+}
+
+@keyframes bounce-2 {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+    to {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+    }
+}
+
+/* apexcharts.css */
+.apexcharts-canvas * {
+    font-family: var(--body-font-family), serif !important;
+}
+
+.apexcharts-canvas .apexcharts-gridline {
+    @apply stroke-base-content/20;
+}
+
+.apexcharts-theme-dark .apexcharts-toolbar .apexcharts-menu {
+    @apply border-base-300;
+}
+
+.apexcharts-canvas .apexcharts-xaxis line {
+    @apply stroke-base-content/20;
+}
+
+.apexcharts-canvas .apexcharts-inner .apexcharts-grid-borders line {
+    @apply stroke-base-content/20;
+}
+
+.apexcharts-canvas .apexcharts-yaxis line {
+    @apply stroke-base-content/20;
+}
+
+.apexcharts-canvas .apexcharts-xaxis-tick {
+    @apply stroke-base-content/20;
+}
